Support creating new product category

--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>Book List
+  <h1>Product category List
     <a [routerLink]="['/book-create']" class="btn btn-default btn-lg">
       <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
     </a>
@@ -7,16 +7,19 @@
   <table class="table">
     <thead>
       <tr>
-        <th>Title</th>
-        <th>Author</th>
-        <th>Action</th>
+        <th>ID</th>
+        <th>Category</th>
+        <th>Order</th>
+        <th>Image</th>
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let book of books">
-        <td>{{ book.title }}</td>
-        <td>{{ book.author }}</td>
-        <td><a [routerLink]="['/book-details', book._id]">Show Detail</a></td>
+      <tr *ngFor="let category of categories">
+        <td>{{ category._id }}</td>
+        <td>{{ category.displayStr }}</td>
+        <td>{{ category.order }}</td>
+        <td><img src="/image/{{category.imageUrl}}"/></td>
+        <td><a [routerLink]="['/book-details', category._id]">Show Detail</a></td>
       </tr>
     </tbody>
   </table>
