--- a/src/app/book-create/book-create.component.html
+++ b/src/app/book-create/book-create.component.html
@@ -1,27 +1,20 @@
 <div class="container">
-  <h1>Add New Book</h1>
+  <h1>Add new product category</h1>
   <div class="row">
     <div class="col-md-6">
-      <form (ngSubmit)="saveBook()" #bookForm="ngForm">
+      <form (ngSubmit)="saveProductCategory()" #bookForm="ngForm">
         <div class="form-group">
-          <label for="name">ISBN</label>
-          <input type="text" class="form-control" [(ngModel)]="book.isbn" name="isbn" required>
+          <label for="name">Category Name</label>
+          <input type="text" class="form-control" [(ngModel)]="productCategory.displayStr" name="displayStr" required>
         </div>
         <div class="form-group">
-          <label for="name">Title</label>
-          <input type="text" class="form-control" [(ngModel)]="book.title" name="title" required>
+          <label for="name">Order</label>
+          <input type="text" class="form-control" [(ngModel)]="productCategory.order" name="order" required>
         </div>
         <div class="form-group">
-          <label for="name">Author</label>
-          <input type="text" class="form-control" [(ngModel)]="book.author" name="author" required>
-        </div>
-        <div class="form-group">
-          <label for="name">Published Year</label>
-          <input type="number" class="form-control" [(ngModel)]="book.published_year" name="published_year" required>
-        </div>
-        <div class="form-group">
-          <label for="name">Publisher</label>
-          <input type="text" class="form-control" [(ngModel)]="book.publisher" name="publisher" required>
+          <label for="image">Image</label>
+          <input type="file" id="image" (change)="onFileChange($event)" #fileInput>
+          <button type="button" class="btn btn-sm btn-default" (click)="clearFile()">clear file</button>
         </div>
         <div class="form-group">
           <button type="submit" class="btn btn-success" [disabled]="!bookForm.form.valid">Save</button>
