--- a/src/app/book-detail/book-detail.component.html
+++ b/src/app/book-detail/book-detail.component.html
@@ -1,21 +1,15 @@
 <div class="container">
-  <h1>{{ book.title }}</h1>
+  <h1>{{ category.displayStr }}</h1>
   <dl class="list">
-    <dt>ISBN</dt>
-    <dd>{{ book.isbn }}</dd>
-    <dt>Author</dt>
-    <dd>{{ book.author }}</dd>
-    <dt>Publish Year</dt>
-    <dd>{{ book.published_year }}</dd>
-    <dt>Publisher</dt>
-    <dd>{{ book.publisher }}</dd>
-    <dt>Update Date</dt>
-    <dd>{{ book.updated_date | date:'short' }}</dd>
+    <dt>Product category</dt>
+    <dd>{{ category.displayStr }}</dd>
+    <dt>Order</dt>
+    <dd>{{ category.order }}</dd>
   </dl>
 </div>
 <div class="row">
   <div class="col-md-12">
-    <a [routerLink]="['/book-edit', book._id]" class="btn btn-success">EDIT</a>
-    <button class="btn btn-danger" type="button" (click)="deleteBook(book._id)">DELETE</button>
+    <a [routerLink]="['/book-edit', category._id]" class="btn btn-success">EDIT</a>
+    <button class="btn btn-danger" type="button" (click)="deleteProductCategory(category._id)">DELETE</button>
   </div>
 </div>
