Support creating new product category

--- a/src/app/book-detail/book-detail.component.html
+++ b/src/app/book-detail/book-detail.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <h1>{{ category.displayStr }}</h1>
   <dl class="list">
-    <dt>Product category</dt>
+    <dt>Product category xxxxxx</dt>
     <dd>{{ category.displayStr }}</dd>
     <dt>Order</dt>
     <dd>{{ category.order }}</dd>
