--- a/src/app/book-create/book-create.component.html
+++ b/src/app/book-create/book-create.component.html
@@ -14,7 +14,7 @@
         <div class="form-group">
           <label for="image">Image</label>
           <input type="file" id="image" (change)="onFileChange($event)" #fileInput>
-          <button type="button" class="btn btn-sm btn-default" (click)="clearFile()">clear file</button>
+          <button type="button" class="btn btn-sm btn-default" (click)="clearFile()">Clear file</button>
         </div>
         <div class="form-group">
           <button type="submit" class="btn btn-success" [disabled]="!bookForm.form.valid">Save</button>
