--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -18,7 +18,7 @@
         <td>{{ category._id }}</td>
         <td>{{ category.displayStr }}</td>
         <td>{{ category.order }}</td>
-        <td><img src="/image/{{category.imageUrl}}"/></td>
+        <td><img src="/image/{{category.imageUrl}}" width="100"/></td>
         <td><a [routerLink]="['/book-details', category._id]">Show Detail</a> | <button class="btn btn-danger" type="button" (click)="deleteProductCategory(category._id)">DELETE</button></td>
 
       </tr>
