--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <h1>Product category List
-    <a [routerLink]="['/book-create']" class="btn btn-default btn-lg">
+    <a [routerLink]="['/category/new']" class="btn btn-default btn-lg">
       <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
     </a>
   </h1>
