Remove show detail link on main page

--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -19,8 +19,10 @@
         <td>{{ category.displayStr }}</td>
         <td>{{ category.order }}</td>
         <td><img src="/image/{{category.imageUrl}}" width="100"/></td>
-        <td><a [routerLink]="['/book-details', category._id]">Show Detail</a> | <button class="btn btn-danger" type="button" (click)="deleteProductCategory(category._id)">DELETE</button></td>
-
+        <td><button class="btn btn-danger" type="button" (click)="deleteProductCategory(category._id)">DELETE</button></td>
+        <!--
+        <a [routerLink]="['/book-details', category._id]">Show Detail</a> | 
+        --> 
       </tr>
     </tbody>
   </table>
