--- a/src/app/category-create/category-create.component.html
+++ b/src/app/category-create/category-create.component.html
@@ -2,7 +2,7 @@
   <h1>Add new product category</h1>
   <div class="row">
     <div class="col-md-6">
-      <form (ngSubmit)="saveProductCategory()" #bookForm="ngForm">
+      <form (ngSubmit)="saveProductCategory()" #categoryForm="ngForm">
         <div class="form-group">
           <label for="name">Category Name</label>
           <input type="text" class="form-control" [(ngModel)]="productCategory.displayStr" name="displayStr" required>
@@ -17,7 +17,7 @@
           <button type="button" class="btn btn-sm btn-default" (click)="clearFile()">Clear file</button>
         </div>
         <div class="form-group">
-          <button type="submit" class="btn btn-success" [disabled]="!bookForm.form.valid">Save</button>
+          <button type="submit" class="btn btn-success" [disabled]="!categoryForm.form.valid">Save</button>
         </div>
       </form>
     </div>
