Remove book-detail & create category detail page

--- a/src/app/category-detail/category-detail.component.html
+++ b/src/app/category-detail/category-detail.component.html
@@ -1,10 +1,12 @@
 <div class="container">
   <h1>{{ category.displayStr }}</h1>
   <dl class="list">
-    <dt>Product category xxxxxx</dt>
+    <dt>Product category</dt>
     <dd>{{ category.displayStr }}</dd>
     <dt>Order</dt>
     <dd>{{ category.order }}</dd>
+    <dt>Image</dt>
+    <dd><img src="/api/image/{{category.imageUrl}}" width="100"/></dd>
   </dl>
 </div>
 <div class="row">
