--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <h1>Product category List
     <a [routerLink]="['/category/new']" class="btn btn-default btn-lg">
-      <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+      <i class="fa fa-plus" aria-hidden="true"></i>
     </a>
   </h1>
   <table class="table">
