--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -1,6 +1,6 @@
 <div class="container">
-  <h1>Product category List
-    <a [routerLink]="['/category/new']" class="btn btn-default btn-lg">
+  <h1>Product category list
+    <a [routerLink]="['/category/new']" class="btn btn-primary waves-light" mdbWavesEffect>
       <i class="fa fa-plus" aria-hidden="true"></i>
     </a>
   </h1>
@@ -21,7 +21,7 @@
         <td>{{ category.order }}</td>
         <td><img src="/api/image/{{category.imageUrl}}" width="100"/></td>
         <td>{{productCounts[category._id]}}</td>
-        <td><a [routerLink]="['/category/detail', category._id]">Detail</a> | <button class="btn btn-danger" type="button" (click)="deleteProductCategory(category._id)">DELETE</button></td>
+        <td><a [routerLink]="['/category/detail', category._id]">Detail</a> | <button type="button" class="btn btn-danger waves-light" (click)="deleteProductCategory(category._id)" mdbWavesEffect><i class="fa fa-times" aria-hidden="true"></i></button></td>
       </tr>
     </tbody>
   </table>
