--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -85,6 +85,6 @@
 </main>
 <footer class="page-footer font-small blue">
     <div class="footer-copyright py-3 text-center">
-        Stay POSITIVE, work hard, make it happen
+        Stay POSITIVE, WORK hard, make it HAPPEN.
     </div>
 </footer>
